* Fix spacing on title slide

--- a/layout.css
+++ b/layout.css
@@ -109,7 +109,7 @@ ul > li > ol > li > ul > li { font-size:1.1rem }
   border-top: 0px solid #222;
   background-size: 100%;
   position: absolute;
-  height: 370px;
+  height: 300px;
   width: 100%;
   bottom: 0px;
   left: 0px;
